# dotfiles

./: .clang-format  CMakeLists.txt
alacritty/: alacritty.toml
flameshot/: flameshot.ini
i3/: config  i3blocks.conf
i3/scripts/: blur-lock
nitrogen/: bg-saved.cfg  nitrogen.cfg
nvim/: lazy-lock.json  stylua.toml
nvim/lua/config/: cmds.lua  keymaps.lua  lazy.lua  options.lua
nvim/lua/plugins/: autocomplete.lua  autopairs.lua  dap.lua.bak  formatter.lua  harpoon.lua  init.lua  linter.lua.bak  lsp.lua  lsp.lua.bak  lualine.lua  mason.lua  nvim-surround.lua  nvim-tree.lua  nvim-treesitter.lua  telescope.lua  tmux-navigator.lua  toggleterm.lua  tokyonight.lua  vimtex.lua
picom/: picom.conf
polybar/: config.ini  launch.sh
zathura/: zathurarc
